fix/ internal gaps in the  header

--- a/src/ui/client-layout/styles/client-layout.module.scss
+++ b/src/ui/client-layout/styles/client-layout.module.scss
@@ -2,7 +2,7 @@
 
     min-width: 100%;
     min-height: 100vh;
-    margin-top: 110px;
+    margin-top: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
