--- a/src/ui/mobile-modal-menu/style/mobile-modal-menu.module.scss
+++ b/src/ui/mobile-modal-menu/style/mobile-modal-menu.module.scss
@@ -3,7 +3,7 @@
 
 .modal {
 
-    max-width: 747px;
+    max-width: 950px;
     width: 100%;
     height: 100%;
     padding-top: 103px;
@@ -11,7 +11,7 @@
     display: none;
     justify-content: center;
     position: fixed;
-    top: 110px;
+    top: 80px;
     left: 0px;
     z-index: 10;
     transition: all 1s ease 0s;
